nicknamer/server/tests/snapshots/auth_endpoints_tests__can_render_login_page_with_homepage_button_when_user_logged_in.snap
---
source: nicknamer/server/tests/auth_endpoints_tests.rs
expression: snapshot_data
---
test_context: render_login_page_with_homepage_button_when_user_logged_in
status: 200
headers: {}
html_body:
  - "<!DOCTYPE html>"
  - "<html lang=\"en\" data-theme=\"light\">"
  - "  <head>"
  - "    <title>Login - Nicknamer</title>"
  - "    <meta charset=\"UTF-8\" />"
  - "    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\" />"
  - "    <script"
  - "      src=\"https://cdn.jsdelivr.net/npm/htmx.org@2.0.5/dist/htmx.min.js\""
  - "      crossorigin=\"anonymous\""
  - "    ></script>"
  - "    <script"
  - "      src=\"https://cdn.jsdelivr.net/npm/htmx-ext-response-targets@2.0.2\""
  - "      crossorigin=\"anonymous\""
  - "    ></script>"
  - "    <link"
  - "      href=\"https://cdn.jsdelivr.net/npm/daisyui@5\""
  - "      rel=\"stylesheet\""
  - "      type=\"text/css\""
  - "    />"
  - "    <script src=\"https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4\"></script>"
  - "    "
  - "  </head>"
  - "  <body"
  - "    class=\"\""
  - "    "
  - "  >"
  - "     "
  - "<div class=\"hero min-h-screen bg-base-200\">"
  - "  <div class=\"hero-content text-center\">"
  - "    <div class=\"max-w-md\">"
  - "      <h1 class=\"text-5xl font-bold mb-8\">Nicknamer</h1>"
  - "      <div"
  - "        id=\"login-widget\""
  - "        class=\"card w-full max-w-sm shadow-2xl bg-base-100\""
  - "      >"
  - "        <div id=\"login-content\" class=\"card-body\">"
  - "          "
  - "          <h2 class=\"card-title text-2xl font-bold\">Welcome back!</h2>"
  - "          <p class=\"mb-4\">"
  - "            You are already logged in as"
  - "            <strong>testuser</strong>."
  - "          </p>"
  - "          <div class=\"form-control\">"
  - "            <a href=\"/\" class=\"btn btn-primary\">Go to Homepage</a>"
  - "          </div>"
  - "          "
  - "        </div>"
  - "      </div>"
  - "    </div>"
  - "  </div>"
  - "</div>"
  - " "
  - "    <footer class=\"footer footer-center p-4 bg-base-300 text-base-content mt-6\">"
  - "      <aside>"
  - "        <p>"
  - "          Made with ❤️ by"
  - "          <a"
  - "            href=\"https://github.com/tacascer\""
  - "            target=\"_blank\""
  - "            rel=\"noopener noreferrer\""
  - "            >tacascer</a"
  - "          >"
  - "        </p>"
  - "      </aside>"
  - "    </footer>"
  - "     "
  - "  </body>"
  - "</html>"
